# ConsensusEconomics

./: .gitignore  CLAUDE.md  README.md  SCHEMA.md  pyproject.toml
mains/: decompress_files.py  get_professional_forecasts.py
mains/getters/: consolidate_output.py  get_country_forecasts.py  get_forex_forecasts.py
mains/mappings/: build_variable_map.py
mains/preprocessing/: clean_xlsx_folder.py  decompress_files.py
mains/storage/: save_to_bucket.py
src/consensus_economics/: __init__.py  config.py  constructor.py  paths.py  s3.py  worksheet.py
src/consensus_economics/aws/: bucket_manager.py  s3.py
src/consensus_economics/mappings/: __init__.py  variable_map.csv
src/consensus_economics/utils/: __init__.py  check_format.py  countries.py  date_format.py  parallel_processing.py  path_format.py
src/consensus_economics/worksheets/: __init__.py  base_worksheet.py  country_worksheet.py  forex_worksheet.py
tests/: __init__.py  test_check_format.py  test_config.py  test_constructor.py  test_countries.py  test_date_format.py  test_golden_parsers.py  test_variable_map.py
