[tool.poetry]
name = "consensuseconomics"
version = "0.1.0"
description = ""
authors = ["Rubén Fernández Fuertes <fernandezfuertesruben@gmail.com>"]
readme = "README.md"
packages = [{ include = "consensus_economics", from = "src" }]


[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.35.92"
pandas = "^2.2.3"
duckdb = "^1.1.3"
openpyxl = "^3.1.2"
tqdm = "^4.67.1"
bs4 = "^0.0.2"


[tool.poetry.scripts]
decompress_files = "mains.decompress_files:main"
get_professional_forecasts = "mains.get_professional_forecasts:main"
save_to_bucket = "mains.save_to_bucket:main"
clean_xlsx_folder = "mains.clean_xlsx_folder:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
