[project]
name = "consensus-economics"
version = "0.2.0"
description = "Data pipeline for processing Consensus Economics forecasts"
authors = [{ name = "Rubén Fernández Fuertes", email = "fernandezfuertesruben@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "openpyxl>=3.1.2",
    "tqdm>=4.67.1",
    "pyarrow>=18.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
aws = [
    "boto3>=1.35.0",
]

[project.scripts]
decompress-files = "mains.preprocessing.decompress_files:main"
clean-xlsx-folder = "mains.preprocessing.clean_xlsx_folder:main"
get-country-forecasts = "mains.getters.get_country_forecasts:main"
get-forex-forecasts = "mains.getters.get_forex_forecasts:main"
consolidate-output = "mains.getters.consolidate_output:main"
save-to-bucket = "mains.storage.save_to_bucket:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/consensus_economics", "mains"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
